# FantasyFootball

./: .gitignore  .replit  CHANGELOG.md  DATA_SOURCES.md  IMPROVEMENTS.md  LICENSE  README.md  RICH_UI_GUIDE.md  countrycodes.csv  ffmCLI.py  ffmGui.py  frontend.kv  main.py  play.py  pyproject.toml  requirements.txt  run.py  run_rich.py
assets/: league_average_goals.csv  season_data_sources.csv
assetts/: elo20210122.csv
cligaming/: ffm.py  teamUserInput.py
club/: active_player.py  attributes.py  club.py  own_player.py  player.py  player_stats.py  scratch.py  scratch2.py  scratch_playerclass.py  scratch_stats.py  stats.py
core/: __init__.py
development/: README.md  active_player.py  active_player_old.py  attribute.py  attributes_bank.py  attributes_old.py  club.py  extract_data.py  formation.py  helpers.py  player (copy).py  player_stats.py  scratch.py  scratch_playerclass.py  scratch_stats.py
game/: ffm.py  gamestats.py  league.py  scheduling.py  scratch.py  simulator.py  team.py  teamUserInput.py
gamesaves_json/: metadata.json
gui/: newgame.py  season.py  startgame.py
interfaces/: __init__.py
kyvy_templates/: ffm.kv  newgame.kv  season.kv  startgame.kv
modules/: diskstore.py  ffm.py  league.py  matchDay.py  matchday.py  setup.py  simulator.py  support.py
players/: active_player.py  fifa.py  scratch.py
scratch_files/: player (copy).py  player_stats.py  scratch_playerclass.py  scratch_stats.py
stats/: __init__.py  gamestats.py
support/: gamestats.py  helpers.py  replit_db_store.py  scheduling.py  screen_utils.py  stack.py  teamUserInput.py
(+652 files in other folders)
