[tool.poetry]
name = "FantasyFootball"
version = "0.3.1"
description = ""
authors = ["francesco@fralke.com"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.0.0"
tabulate = "^0.8.9"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
